Setting up the Repo for Food Delivery Project

--- a/basics/index_React.html
+++ b/basics/index_React.html
@@ -18,7 +18,7 @@
       src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
     ></script> -->
 
-    <script type="module" src="./App.js"> 
+    <script type="module" src="./App_React.js"> 
 
     </script>
   </body>
