--- a/basics/index_HTML.html
+++ b/basics/index_HTML.html
@@ -4,13 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./index_React.css">
   </head>
   <body>
-    <div id="root"></div>
-
-    <script type="module" src="./App.js"> 
-
-    </script>
+    <div id="root">
+      <h1>Hello World! using only HTML</h1>
+    </div>
   </body>
 </html>
