--- a/index.html
+++ b/index.html
@@ -4,13 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="/dist/output.css" rel="stylesheet" />
   </head>
   <body>
     <div id="root"></div>
 
-    <script type="module" src="./App.js"> 
-
-    </script>
+    <script type="module" src="./src/App.js"></script>
   </body>
 </html>
